styles/style.css
@import url(./fonts.css);

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

body {
  font-family: "Roboto-Regular", sans-serif;
}

.container {
  max-width: 1140px;
  width: 100%;
  height: 100%;
  padding: 0 15px;
  margin: 0 auto;
}

.page-container {
  max-width: 1400px;
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

.special-container {
  max-width: 1400px;
  width: 100%;
  height: 100%;
  margin: 0 auto;
  padding: 0 145px 0 130px;
}

.header__wrap-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__wrap-nav-side {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px 0 15px;
  gap: 4px;
}

.header__wrap-nav-side-link {
  width: 150px;
  height: 46px;
}

.header__wrap-nav-side-link-name {
  color: #000;
  font-family: "Roboto-Bold", sans-serif;
  font-weight: 700;
  font-size: 18px;
}

.header__wrap-nav-list {
  display: flex;
  align-items: center;
  gap: 16px;
  padding: 44px 0 42px;
}

.header__wrap-nav-list-item-link {
  color: #3a3838;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 18px;
}

.header__wrap-nav-list-item-link:hover {
  color: #ef4423;
  transition: 0.3s linear;
}

.header__wrap-img {
  width: 1140px;
  height: 272px;
}

.banner__wrap {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.banner__wrap-card {
  max-width: 350px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

.banner__wrap-card:nth-child(1) {
  background: #b71c1c;
}

.banner__wrap-card:nth-child(2) {
  background: #6a1b9a;
}

.banner__wrap-card:nth-child(3) {
  background: #303f9f;
}

.banner__wrap-card:nth-child(4) {
  background: #00695c;
}

.banner__wrap-card-link {
  width: 350px;
  height: 175px;
}

.banner__wrap-card-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

.banner__wrap-card-content1 {
  padding: 0 15px 15px 15px;
}

.banner__wrap-card-content2 {
  padding: 15px 15px 0 15px;
}

.banner__wrap-card-content3 {
  padding: 0 15px 15px 15px;
}

.banner__wrap-card-content4 {
  padding: 15px 15px 0 15px;
}

.banner__wrap-card-content-title {
  color: #fff;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 19px;
}

.banner__wrap-card-content-text {
  color: #ebebeb;
}

.news {
  padding: 40px 0 50px;
}

.news__wrap-title {
  color: #3a3838;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 22px;
  margin-bottom: 40px;
  text-align: center;
}

.news__wrap-content_bg {
  background: #ededed;
}

.news__wrap-content {
  display: flex;
  align-items: center;
  gap: 30px;
}

.news__wrap-content-img {
  width: 555px;
  height: 531px;
}

.news__wrap-content-desc {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  max-width: 540px;
  width: 100%;
  padding: 20px 0 30px;
}

.news__wrap-content-desc-title {
  color: #3a3838;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 22px;
}

.news__wrap-content-desc-text {
  color: #686868;
  font-size: 18px;
}

.footer {
  background: #3a3838;
}

.footer__wrap-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer__wrap-nav-side {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4px;
}

.footer__wrap-nav-side-link {
  width: 150px;
  height: 46px;
}

.footer__wrap-nav-side-link-name {
  color: #fff;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 18px;
}

.footer__wrap-nav-list {
  display: flex;
  align-items: center;
  gap: 15px;
  padding: 54px 0 54px;
}

.footer__wrap-nav-list-item-link {
  color: #fff;
  font-family: "Roboto-Bold", sans-serif;
  font-size: 18px;
  transition: 0.3s linear;
}

.footer__wrap-nav-list-item-link:hover {
  color: #ef4423;
}

